# sazid

./: '  .env  .envrc  .gitignore  .gitmodules  .rustfmt.toml  .tool-versions  =  Cargo-old.toml  Cargo.toml  Commands.json  Commands.toml  HelixGenericNotes.md  LICENSE-APACHE  LICENSE-MIT  README.md  Readme.md  Settings.toml  ]  behaviors_to_test.txt  build.rs  diesel.toml  docker-compose.yml  docker-init-db.sql  languages.toml  package.json  rust-analyzer.json  rust-analyzer.json-orig  rust-toolchain.toml  rustfmt.toml  saved_response.txt  temp.rs  tmp.txt
.config/: config.json5  config.toml
Documents/: Requirements.md  Summary.md  notes.md
assets/: create_chat_completion_request_schema_11_6_23.json  qdrant_example.rs
crates/sazid/: Cargo.toml
crates/sazid-helix/: Cargo.toml
crates/sazid-helix/src/: application.rs  config.rs  main.rs
crates/sazid-markdown/: Cargo.toml
crates/sazid-markdown/assets/: languages_test.toml
crates/sazid-markdown/src/: main.rs
crates/sazid-view/: Cargo.toml
crates/sazid-view/src/: document.rs  graphics.rs  input.rs  theme.rs
crates/sazid/migrations/2023-12-13-000001_create_file/: up.sql
crates/sazid/src/: action.rs  app.rs  args.rs  commands.rs  components.rs  compositor.rs  config.rs  handlers.rs  job.rs  keymap.rs  lib.rs  macros.rs  main.rs  sazid_tui.rs  tui.rs  utils.rs
crates/sazid/src/app/: color_math.rs  errors.rs  gpt_interface.rs  helpers.rs  markdown.rs  messages.rs  request_validation.rs  session_config.rs  session_view.rs  types.rs
crates/sazid/src/app/database/: data_manager.rs
crates/sazid/src/app/functions/: cargo_check_function.rs  edit_file_function.rs  errors.rs  file_search_function.rs  mod.rs  pcre2grep_function.rs  read_file_lines_function.rs  treesitter_function.rs  types.rs
crates/sazid/src/app/lsi/: interface.rs  query.rs  status_message.rs  symbol_types.rs  tool_impl.rs  workspace.rs  workspace_file.rs
crates/sazid/src/app/lsp/: helix_lsp_interface.rs  lsp_client.rs  mod.rs  symbol_types.rs  workspace.rs  workspace_file.rs
crates/sazid/src/app/lsp_interface/: helix_lsp_interface.rs  mod.rs
crates/sazid/src/app/model_tools/: argument_validation.rs  cargo_check_function.rs  create_file_function.rs  errors.rs  file_search_function.rs  grep_function.rs  lsp_get_diagnostics.rs  lsp_get_workspace_files.rs  lsp_goto_symbol_declaration.rs  lsp_goto_symbol_definition.rs  lsp_goto_type_definition.rs  lsp_query_symbols.rs  lsp_tool.rs  mod.rs  pcre2grep_function.rs  read_file_lines_function.rs  tool_call.rs  tool_call_template.rs  treesitter_function.rs  types.rs
crates/sazid/src/app/model_tools/archive/: treesitter_function.rs
crates/sazid/src/app/tools/: chunkifier.rs  pdf_extractor.rs
crates/sazid/src/app/treesitter/: treesitter_parser.rs  treesitter_query.rs
crates/sazid/src/commands/: lsp.rs  typed.rs
crates/sazid/src/components/: data_manager.rs  home.rs  lsp.rs  session.rs
crates/sazid/src/handlers/: completion.rs  signature_help.rs
crates/sazid/src/keymap/: default.rs
crates/sazid/src/ui/: completion.rs  document.rs  editor.rs  info.rs  lsp.rs  markdown.rs  menu.rs  mod.rs  overlay.rs  picker.rs  popup.rs  prompt.rs  session.rs  statusline.rs
crates/sazid/tests/: argument_validation_tests.rs  helix_lsp_tests.rs
crates/sazid/tests/archived_tests/: treesitter_extraction_tests.rs  treesitter_tests.rs
crates/sazid/tests/assets/rust_test_project/src/: bar.rs
crates/sazid/tests/snapshots/: stream_response_test__tests__ntest_callback-17.snap  stream_response_test__tests__ntest_callback-18.snap  stream_response_test__tests__ntest_callback-20.snap  stream_response_test__tests__ntest_callback-30.snap  stream_response_test__tests__ntest_callback-32.snap  stream_response_test__tests__ntest_callback-34.snap  stream_response_test__tests__ntest_callback-4.snap  stream_response_test__tests__ntest_callback-7.snap
docs/: Requirements.md  Updated_Requirements.md  function_requirements.md  neovim_plug_notes.txt  promptsrs  tests_to_implement.md
helix-core/: Cargo.toml
helix-loader/: Cargo.toml
helix-lsp/: Cargo.toml
old_src/: errors.rs  types.rs
sazid/: Cargo.toml  build.rs
sazid-helix/: Cargo.toml
sazid-loader/: Cargo.toml  build.rs
sazid-lsp/: Cargo.toml
sazid-term/: Cargo.toml  build.rs
sazid-term/src/: application.rs  args.rs  commands.rs  compositor.rs  config.rs  events.rs  handlers.rs  health.rs  job.rs  keymap.rs  lib.rs  main.rs  movement.rs
sazid-term/src/commands/: dap.rs  llm.rs  lsp.rs  typed.rs
sazid-term/src/handlers/: completion.rs  signature_help.rs
sazid-term/src/keymap/: default.rs  minimal.rs
sazid-term/src/ui/: completion.rs  document.rs  editor.rs  info.rs  lsp.rs  markdown.rs  markdown_renderer.rs  markdownmenu.rs  menu.rs  mod.rs  overlay.rs  picker.rs  popup.rs  prompt.rs  session.rs  spinner.rs  statusline.rs  text.rs  textbox.rs
sazid-term/src/widgets/: mod.rs  paragraph.rs  plaintext_reflow.rs  reflow.rs  table.rs
sazid-term/tests/: integration.rs  lsi_interface_tests.rs  plain_text_wrap_tests.rs
sazid-term/tests/test/: auto_indent.rs  auto_pairs.rs  commands.rs  helpers.rs  movement.rs  prompt.rs  splits.rs
sazid-term/tests/test/commands/: movement.rs  write.rs
sazid-term/tests/test/languages/: go.rs  yaml.rs
sazid-term/tests/test_assets/svd_to_csv/: Cargo.toml  STM32F0x0.csv  STM32F479.csv  stm32h563.svd.csv
sazid-term/tests/test_assets/svd_to_csv/src/: main.rs
session_data/: 2023-08-27_22-02-21.json  202308272243_1MTN.json  last_session.txt
src/: action.rs  app.rs  chunkifier.rs  cli.rs  cli_options.rs  components.rs  config.rs  consts.rs  errors.rs  file_chunker.rs  gpt_commands.rs  gpt_connector.rs  lib.rs  logger.rs  main.rs  pdf_extractor.rs  project_manager.rs  runner.rs  schema.rs  session.rs  session_manager.rs  tui.rs  types.rs  ui.rs  utils.rs
tests/: argument_validation_tests.rs  cargo_check_function_tests.rs  diesel_tests.rs  integration_tests.rs  lsp_tests.rs  patch_files_function_tests.rs  sed_command_tests.rs  session_api_test.rs  stream_response_parsing.rs  stream_response_test.rs  (+4 more)
(+582 files in other folders)
