[workspace]
members = [
  "sazid",
  "lib/helix/helix-lsp",
  "lib/helix/helix-core",
  "lib/helix/helix-stdx",
  "lib/helix/helix-parsec",
  "lib/helix/helix-loader",
  "lib/tui-textarea",
  # "sazid/tests/assets/testproject",
]
resolver = "2"
default-members = ["sazid"]

[workspace.package]
# name = "sazid"
version = "0.1.0"
edition = "2021"
description = "Semantic GPT Programming Intelligence"
repository = "https://github.com/cosmikwolf/sazid"
authors = ["tenkai <tenkai@kariya.ai>"]
categories = ["coding assistant"]
license = "Apache 2.0 / MIT"
rust-version = "1.75"
homepage = "https://github.com/cosmikwolf/sazid"

# [profile.dev]


[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
tree-sitter = { version = "0.20", git = "https://github.com/helix-editor/tree-sitter", rev = "660481dbf71413eba5a928b0b0ab8da50c1109e0" }
nucleo = "0.2.0"
