[workspace]
members = [
  "crates/sazid",
  "crates/sazid-helix",
  "lib/helix/helix-core/",
  "lib/helix/helix-dap/",
  "lib/helix/helix-event/",
  "lib/helix/helix-loader/",
  "lib/helix/helix-lsp/",
  "lib/helix/helix-parsec/",
  "lib/helix/helix-stdx/",
  "lib/helix/helix-term/",
  "lib/helix/helix-tui/",
  "lib/helix/helix-vcs/",
  "lib/helix/helix-view/",
  "lib/helix/helix-view/",
  "lib/tui-textarea",
]
resolver = "2"
default-members = ["crates/sazid-helix"]

[workspace.package]
# name = "sazid"
version = "0.1.0"
edition = "2021"
description = "Semantic GPT Programming Intelligence"
repository = "https://github.com/cosmikwolf/sazid"
authors = ["tenkai <tenkai@kariya.ai>"]
categories = ["coding assistant"]
license = "Apache 2.0 / MIT"
rust-version = "1.75"
homepage = "https://github.com/cosmikwolf/sazid"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
tree-sitter = { version = "0.20", git = "https://github.com/helix-editor/tree-sitter", rev = "660481dbf71413eba5a928b0b0ab8da50c1109e0" }
nucleo = "0.2.0"
