[workspace]
members = [
  "sazid",
  "sazid-term",
  "sazid-loader",
  "lib/helix/helix-tui",
  "lib/helix/helix-stdx",
  "lib/helix/helix-vcs",
  "lib/helix/helix-view",
  "lib/helix/helix-lsp",
  "lib/helix/helix-dap",
  "lib/helix/helix-event",
  "lib/helix/helix-tui",
  "lib/helix/helix-core",
]
exclude = ["archive/*"]
resolver = "2"
default-members = ["sazid-term"]

[workspace.package]
# name = "sazid"
version = "0.1.0"
edition = "2021"
description = "Semantic GPT Programming Intelligence"
repository = "https://github.com/cosmikwolf/sazid"
authors = ["tenkai <tenkai@kariya.ai>"]
categories = ["coding assistant"]
license = "Apache 2.0 / MIT"
rust-version = "1.78"
homepage = "https://github.com/cosmikwolf/sazid"


[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
tree-sitter = { version = "0.20", git = "https://github.com/helix-editor/tree-sitter", rev = "660481dbf71413eba5a928b0b0ab8da50c1109e0" }
nucleo = "0.2.1"

tui = { path = "lib/helix/helix-tui", package = "helix-tui", default-features = false }
helix-stdx = { path = "lib/helix/helix-stdx" }
helix-lsp = { path = "lib/helix/helix-lsp" }
helix-vcs = { path = "lib/helix/helix-vcs" }
helix-loader = { path = "sazid-loader", package = "sazid-loader" }
helix-core = { path = "lib/helix/helix-core" }
helix-parsec = { path = "lib/helix/helix-parsec" }
helix-view = { path = "lib/helix/helix-view" }
helix-dap = { path = "lib/helix/helix-dap" }
helix-event = { path = "lib/helix/helix-event" }
helix-tui = { path = "lib/helix/helix-tui" }
sazid = { path = "sazid" }
sazid-view = { path = "sazid-view" }
sazid-term = { path = "sazid-term" }
