[package]
name = "sazid-markdown"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-stdx = { path = "../../lib/helix/helix-stdx" }
helix-lsp = { path = "../../lib/helix/helix-lsp" }
helix-loader = { path = "../../lib/helix/helix-loader" }
helix-core = { path = "../../lib/helix/helix-core" }
helix-view = { path = "../../lib/helix/helix-view" }
helix-term = { path = "../../lib/helix/helix-term" }
tui = { path = "../../lib/helix/helix-tui", package = "helix-tui", default-features = false, features = [
  "crossterm",
] }
pulldown-cmark = { version = "0.9", default-features = false }
log = "0.4"
toml = "0.8.9"
