[package]
name = "sazid"
description = "Semantic GPT Programming Intelligence"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[[bin]]
name = "szd"
path = "src/main.rs"

[dev-dependencies]
insta = { version = "1.34.0", features = [
  "yaml",
  "toml",
  "json",
  "redactions",
] }
# ntest = "0.9.0"
# helix-lsp = { path = "../lib/helix/helix-lsp" }
# helix-loader = { path = "../helix-loader" }
# helix-core = { path = "../helix-core" }


[build-dependencies]
prost-build = "0.12.3"
dotenv = "0.15.0"
helix-loader = { workspace = true }

[dependencies]
helix-stdx = { workspace = true }
helix-lsp = { workspace = true }
helix-loader = { workspace = true }
helix-event = { workspace = true }
helix-core = { workspace = true }
helix-view = { workspace = true }
# sazid-term = { workspace = true }
tui = { workspace = true, package = "helix-tui", default-features = false, features = [
  "crossterm",
] }

uuid = { version = "1.5.0", features = ["serde", "v4"] }
# ansi-to-tui = { path = "../../lib/ansi-to-tui" }
# tui-textarea = { path = "../../lib/tui-textarea", features = [
#   "crossterm",
#   "ratatui",
#   "ansi-escapes",
# ] }

tui-textarea = { version = "0.4.0", features = [
  "crossterm",
  # "ratatui",
  # "ansi-escapes",
] }
change-case = "0.2.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
# tracing-subscriber = { path = "../lib/tracing-subscriber", features = [
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "serde",
  "fmt",
  "std",
  "ansi",
] }
bincode = "1.3.3"
bwrap = { version = "1.3.0", features = ["use_std"] }
async-openai = "0.19.1"
async-recursion = "1.0.5"
backoff = { version = "0.4.0", features = ["tokio"] }
bat = "0.24.0"
better-panic = "0.3.0"
clap = { version = "4.4.5", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
toml = "0.8.9"
color-eyre = "0.6.2"
config = "0.13.3"
console-subscriber = "0.2.0"
jsonrpsee = { version = "0.21.0", features = [
  "client-core",
  "async-client",
  "ws-client",
  "http-client",
  "macros",
] }

inventory = "0.3.15"
diesel = { version = "2.1.4", features = ["postgres", "numeric", "uuid"] }
lsp-types = "0.95.1"
jsonrpc-core = "18.0.0"
tokio = { version = "1.32.0", features = ["full"] }
pgvector = { version = "0.3.2", features = ["diesel"] }
diesel-async = { version = "0.4.1", features = [
  "postgres",
  "async-connection-wrapper",
] }
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
futures-util = "0.3.28"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
lopdf = "0.31.0"
nu-ansi-term = "0.50.0"
pretty_assertions = "1.4.0"
# ratatui = { version = "0.24.0", features = ["serde", "macros"] }
reqwest = "0.11.20"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_json_path = "0.6.3"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
tempfile = "3.8.0"
tiktoken-rs = { version = "0.5.4", features = ["async-openai"] }
tokio-console = "0.1.10"
tokio-util = "0.7.9"
dotenv = "0.15.0"
tui-input = { version = "0.8.0", features = ["serde"] }
walkdir = "2.4.0"
pulldown-cmark = "0.9.3"
pulldown-cmark-mdcat = "2.1.0"
similar-asserts = "1.5.0"
syntect = "5.1.0"
url = "2.4.1"
grep = "0.2.12"
termcolor = "1.3.0"
chrono = "0.4.31"
jsonschema = "0.17.1"
tempdir = "0.3.7"
anstyle = "1.0.4"
once_cell = "1.18.0"
ropey = "1.6.1"
rand = "0.8.5"
regex = "1.10.2"
dirs-next = "2.0.0"
patch = "0.7.0"
textwrap = { version = "0.16.0", features = ["smawk"] }
serde_yaml = "0.9.27"
tokio-postgres = "0.7.10"
postgres = "0.19.7"
postgres-types = "0.2.6"
thiserror = "1.0.50"
md5 = "0.7.0"
blake3 = "1.5.0"
dialoguer = "0.11.0"
async-trait = "0.1.74"
dsync = { version = "0.0.16", features = ["async"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
rust-sitter = "0.4.1"
clipboard = "0.5.0"
diesel_json = "0.2.1"
diff = "0.1.13"
globset = "0.4.14"
anyhow = "1.0.79"
memchr = "2.7.1"
html-escape = "0.2.13"
prost = "0.12.3"
tree-sitter-tags = "0.20.2"
ntest = "0.9.0"
fern = "0.6.2"
humantime = "2.1.0"
owo-colors = "4.0.0"
async-stream = "0.3.5"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
partial_application = "0.2.1"
bitflags = "2.4.2"
arc-swap = "1.6.0"
tokio-stream = "0.1.14"
